// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete /> by default matches with snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c0 .k-Form-Autocomplete__input {
  display: block;
  width: 100%;
  height: 3.125rem;
  box-sizing: border-box;
  background: var(--color-grey-000,#fff);
  border: var(--border-width) solid var(--color-grey-400);
  padding: 0 0.9375rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.3;
  color: var(--color-grey-900,#222);
  -webkit-transition: border-color 0.4s;
  transition: border-color 0.4s;
}

.c0 .k-Form-Autocomplete__input::-webkit-input-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::-moz-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input:-ms-input-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::-moz-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input:focus {
  border-color: var(--color-grey-500);
  outline: var(--outline-input);
  outline-offset: var(--outline-offset-input);
}

.c0.k-Form-Autocomplete--error .k-Form-Autocomplete__input {
  border: var(--border-danger);
  color: var(--color-danger-300,#ffb2c7);
}

.c0.k-Form-Autocomplete--error .k-Form-Autocomplete__input:focus {
  border-color: var(--color-grey-500);
  color: var(--color-grey-900,#222);
}

.c0 .k-Form-Autocomplete__loader {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
  right: 0;
}

.c0 .k-Form-Autocomplete__icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
}

.c0 .k-Form-Autocomplete__suggestions {
  position: absolute;
  top: 3.125rem;
  left: 0;
  right: 0;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  background: var(--color-grey-000,#fff);
  border: var(--border-width) solid var(--color-grey-400);
  border-top: none;
  list-style: none;
  height: calc(2.375rem * var(--Autocomplete-suggestions,1));
  max-height: 7.125rem;
}

.c0 .k-Form-Autocomplete__suggestion__item {
  padding: 0.625rem 0.9375rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.3;
  color: var(--color-grey-900,#222);
}

.c0 .k-Form-Autocomplete__suggestion__item.k-Form-Autocomplete__suggestion__item--noresult {
  font-style: italic;
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult) {
  cursor: pointer;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):hover,
.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):focus,
.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):active {
  background-color: var(--color-grey-200,#f6f6f6);
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult)[aria-selected='true'] {
  background-color: var(--color-grey-300,#eee);
}

.c0.k-Form-Autocomplete--hasIcon-left .k-Form-Autocomplete__input {
  padding-left: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-left .k-Form-Autocomplete__icon {
  left: 0;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__input {
  padding-right: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__loader {
  padding-right: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__icon {
  right: 0;
}

.c0.k-Form-Autocomplete--disabled .k-Form-Autocomplete__icon > svg [stroke]:not([stroke='none']) {
  stroke: var(--color-grey-500,#b8b8b8);
}

.c0.k-Form-Autocomplete--disabled .k-Form-Autocomplete__icon > svg [fill]:not([fill='none']) {
  fill: var(--color-grey-500,#b8b8b8);
}

.c0.k-Form-Autocomplete--orion .k-Form-Autocomplete__input {
  border-radius: var(--border-radius-s);
}

<div
  className="c0 k-Form-Autocomplete k-Form-Autocomplete--orion"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="both"
    aria-expanded={false}
    aria-owns="autocomplete-results"
    autoComplete="off"
    className="k-Form-Autocomplete__input"
    error={false}
    id="autocomplete"
    name="autocomplete"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search a kitten…"
    type="text"
  />
</div>
`;

exports[`<Autocomplete /> with icon matches with snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c0 .k-Form-Autocomplete__input {
  display: block;
  width: 100%;
  height: 3.125rem;
  box-sizing: border-box;
  background: var(--color-grey-000,#fff);
  border: var(--border-width) solid var(--color-grey-400);
  padding: 0 0.9375rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.3;
  color: var(--color-grey-900,#222);
  -webkit-transition: border-color 0.4s;
  transition: border-color 0.4s;
}

.c0 .k-Form-Autocomplete__input::-webkit-input-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::-moz-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input:-ms-input-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::-moz-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input:focus {
  border-color: var(--color-grey-500);
  outline: var(--outline-input);
  outline-offset: var(--outline-offset-input);
}

.c0.k-Form-Autocomplete--error .k-Form-Autocomplete__input {
  border: var(--border-danger);
  color: var(--color-danger-300,#ffb2c7);
}

.c0.k-Form-Autocomplete--error .k-Form-Autocomplete__input:focus {
  border-color: var(--color-grey-500);
  color: var(--color-grey-900,#222);
}

.c0 .k-Form-Autocomplete__loader {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
  right: 0;
}

.c0 .k-Form-Autocomplete__icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
}

.c0 .k-Form-Autocomplete__suggestions {
  position: absolute;
  top: 3.125rem;
  left: 0;
  right: 0;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  background: var(--color-grey-000,#fff);
  border: var(--border-width) solid var(--color-grey-400);
  border-top: none;
  list-style: none;
  height: calc(2.375rem * var(--Autocomplete-suggestions,1));
  max-height: 7.125rem;
}

.c0 .k-Form-Autocomplete__suggestion__item {
  padding: 0.625rem 0.9375rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.3;
  color: var(--color-grey-900,#222);
}

.c0 .k-Form-Autocomplete__suggestion__item.k-Form-Autocomplete__suggestion__item--noresult {
  font-style: italic;
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult) {
  cursor: pointer;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):hover,
.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):focus,
.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):active {
  background-color: var(--color-grey-200,#f6f6f6);
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult)[aria-selected='true'] {
  background-color: var(--color-grey-300,#eee);
}

.c0.k-Form-Autocomplete--hasIcon-left .k-Form-Autocomplete__input {
  padding-left: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-left .k-Form-Autocomplete__icon {
  left: 0;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__input {
  padding-right: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__loader {
  padding-right: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__icon {
  right: 0;
}

.c0.k-Form-Autocomplete--disabled .k-Form-Autocomplete__icon > svg [stroke]:not([stroke='none']) {
  stroke: var(--color-grey-500,#b8b8b8);
}

.c0.k-Form-Autocomplete--disabled .k-Form-Autocomplete__icon > svg [fill]:not([fill='none']) {
  fill: var(--color-grey-500,#b8b8b8);
}

.c0.k-Form-Autocomplete--orion .k-Form-Autocomplete__input {
  border-radius: var(--border-radius-s);
}

<div
  className="c0 k-Form-Autocomplete k-Form-Autocomplete--orion k-Form-Autocomplete--hasIcon-left"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="both"
    aria-expanded={false}
    aria-owns="autocomplete-results"
    autoComplete="off"
    className="k-Form-Autocomplete__input"
    error={false}
    id="autocomplete"
    name="autocomplete"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search a kitten…"
    type="text"
  />
  <span
    aria-hidden="true"
    className="k-Form-Autocomplete__icon"
  >
    <svg
      fill="#222"
      height={15}
      viewBox="0 0 12 15"
      width={15}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <path
        d="M6 0C2.686 0 0 2.72 0 6.033 0 7.69.672 9.186 1.758 10.31L6 14.313l4.282-4.094v-.008A6.003 6.003 0 0 0 6 0zm.04 8.4a2.4 2.4 0 1 1 0-4.8 2.4 2.4 0 0 1 0 4.8z"
      />
    </svg>
  </span>
</div>
`;

exports[`<Autocomplete /> with loading matches with snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.3125rem;
  line-height: 1;
  gap: 0.125rem;
}

.c1 .k-Loader__circle {
  width: 0.3125rem;
  height: 0.3125rem;
  border-radius: var(--border-radius-xxl);
  -webkit-animation: k-Loader-animation-scale 1.75s 0s infinite cubic-bezier(0.2,0.68,0.18,1.08);
  animation: k-Loader-animation-scale 1.75s 0s infinite cubic-bezier(0.2,0.68,0.18,1.08);
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1 .k-Loader__circle:nth-child(1) {
  -webkit-animation-delay: calc(-1.75s / 3);
  animation-delay: calc(-1.75s / 3);
}

.c1 .k-Loader__circle:nth-child(2) {
  -webkit-animation-delay: calc(-1.75s / 3 / 2);
  animation-delay: calc(-1.75s / 3 / 2);
}

.c1 .k-Loader__circle:nth-child(3) {
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c0 .k-Form-Autocomplete__input {
  display: block;
  width: 100%;
  height: 3.125rem;
  box-sizing: border-box;
  background: var(--color-grey-000,#fff);
  border: var(--border-width) solid var(--color-grey-400);
  padding: 0 0.9375rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.3;
  color: var(--color-grey-900,#222);
  -webkit-transition: border-color 0.4s;
  transition: border-color 0.4s;
}

.c0 .k-Form-Autocomplete__input::-webkit-input-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::-moz-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input:-ms-input-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input::-moz-placeholder {
  color: var(--color-grey-500,#b8b8b8);
}

.c0 .k-Form-Autocomplete__input:focus {
  border-color: var(--color-grey-500);
  outline: var(--outline-input);
  outline-offset: var(--outline-offset-input);
}

.c0.k-Form-Autocomplete--error .k-Form-Autocomplete__input {
  border: var(--border-danger);
  color: var(--color-danger-300,#ffb2c7);
}

.c0.k-Form-Autocomplete--error .k-Form-Autocomplete__input:focus {
  border-color: var(--color-grey-500);
  color: var(--color-grey-900,#222);
}

.c0 .k-Form-Autocomplete__loader {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
  right: 0;
}

.c0 .k-Form-Autocomplete__icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 1.125rem;
  z-index: 1;
}

.c0 .k-Form-Autocomplete__suggestions {
  position: absolute;
  top: 3.125rem;
  left: 0;
  right: 0;
  overflow-y: auto;
  margin: 0;
  padding: 0;
  background: var(--color-grey-000,#fff);
  border: var(--border-width) solid var(--color-grey-400);
  border-top: none;
  list-style: none;
  height: calc(2.375rem * var(--Autocomplete-suggestions,1));
  max-height: 7.125rem;
}

.c0 .k-Form-Autocomplete__suggestion__item {
  padding: 0.625rem 0.9375rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.3;
  color: var(--color-grey-900,#222);
}

.c0 .k-Form-Autocomplete__suggestion__item.k-Form-Autocomplete__suggestion__item--noresult {
  font-style: italic;
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult) {
  cursor: pointer;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):hover,
.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):focus,
.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult):active {
  background-color: var(--color-grey-200,#f6f6f6);
}

.c0 .k-Form-Autocomplete__suggestion__item:not(.k-Form-Autocomplete__suggestion__item--noresult)[aria-selected='true'] {
  background-color: var(--color-grey-300,#eee);
}

.c0.k-Form-Autocomplete--hasIcon-left .k-Form-Autocomplete__input {
  padding-left: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-left .k-Form-Autocomplete__icon {
  left: 0;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__input {
  padding-right: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__loader {
  padding-right: 2.8125rem;
}

.c0.k-Form-Autocomplete--hasIcon-right .k-Form-Autocomplete__icon {
  right: 0;
}

.c0.k-Form-Autocomplete--disabled .k-Form-Autocomplete__icon > svg [stroke]:not([stroke='none']) {
  stroke: var(--color-grey-500,#b8b8b8);
}

.c0.k-Form-Autocomplete--disabled .k-Form-Autocomplete__icon > svg [fill]:not([fill='none']) {
  fill: var(--color-grey-500,#b8b8b8);
}

.c0.k-Form-Autocomplete--orion .k-Form-Autocomplete__input {
  border-radius: var(--border-radius-s);
}

<div
  className="c0 k-Form-Autocomplete k-Form-Autocomplete--orion"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="both"
    aria-expanded={false}
    aria-owns="autocomplete-results"
    autoComplete="off"
    className="k-Form-Autocomplete__input"
    error={false}
    id="autocomplete"
    name="autocomplete"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search a kitten…"
    type="text"
  />
  <div
    className="c1 k-Loader k-Form-Autocomplete__loader"
  >
    <svg
      className="k-Loader__circle"
      fill="var(--color-grey-500, #b8b8b8)"
      viewBox="0 0 5 5"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={2.5}
        cy={2.5}
        r={5}
      />
    </svg>
    <svg
      className="k-Loader__circle"
      fill="var(--color-grey-500, #b8b8b8)"
      viewBox="0 0 5 5"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={2.5}
        cy={2.5}
        r={5}
      />
    </svg>
    <svg
      className="k-Loader__circle"
      fill="var(--color-grey-500, #b8b8b8)"
      viewBox="0 0 5 5"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={2.5}
        cy={2.5}
        r={5}
      />
    </svg>
  </div>
  <span
    className="k-u-a11y-visuallyHidden"
    lang="en"
  >
    loading
  </span>
</div>
`;
